semantic-HTML-applied-to-header-of-webPage

--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
   </head>
 
   <body>
-    <div class="header">
+    <!-- Semantic HTML:The logo and navigation links should be wrapped in a header tag not a div tag -->
+
+    <header class="header">
       <h1>Hori<span class="seo">seo</span>n</h1>
-      <div>
+
+      <!--Semantic HTML: the navigation links should be wrapped in nav tag not a div -->
+
+      <nav>
         <ul>
           <li>
             <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -23,8 +28,9 @@
             <a href="#social-media-marketing">Social Media Marketing</a>
           </li>
         </ul>
-      </div>
-    </div>
+      </nav>
+    </header>
+
     <div class="hero"></div>
     <div class="content">
       <div class="search-engine-optimization">
