added-main-tag-for-semantic-HTML

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <main>
       <div class="hero"></div>
 
-      <!--Semantic HTML: Replaced the div with a section tag to define the left hand side section of the content -->
+      <!--Semantic HTML: Replaced the div with a section tag to define the left hand side section of the contents -->
 
       <section class="content">
         <!-- Semantic HTML: Replaced the div with article tags for each of the 3 in order to specify independent self contained content   -->
