--- a/index.html
+++ b/index.html
@@ -87,7 +87,10 @@
           </p>
         </article>
       </section>
-      <div class="benefits">
+
+      <!--Semantic HTML: Due to the additional content on the RHS of the main, a aside tag is required-->
+
+      <aside class="benefits">
         <div class="benefit-lead">
           <h3>Lead Generation</h3>
           <img src="./assets/images/lead-generation.png" />
@@ -96,6 +99,7 @@
             business, bringing customers directly to your website.
           </p>
         </div>
+
         <div class="benefit-brand">
           <h3>Brand Awareness</h3>
           <img src="./assets/images/brand-awareness.png" />
@@ -104,6 +108,7 @@
             increasing the search ranking and visibility for your business.
           </p>
         </div>
+
         <div class="benefit-cost">
           <h3>Cost Management</h3>
           <img src="./assets/images/cost-management.png" />
@@ -112,7 +117,7 @@
             costs decrease, and you no longer need to advertise your page.
           </p>
         </div>
-      </div>
+      </aside>
     </main>
     <div class="footer">
       <h2>Made with ❤️️ by Horiseon</h2>
