--- a/index.html
+++ b/index.html
@@ -119,9 +119,11 @@
         </div>
       </aside>
     </main>
-    <div class="footer">
+
+    <!--Semantic HTML: Changing dive for a footer tag -->
+    <footer class="footer">
       <h2>Made with ❤️️ by Horiseon</h2>
       <p>&copy; 2019 Horiseon Social Solution Services, Inc.</p>
-    </div>
+    </footer>
   </body>
 </html>
