--- a/index.html
+++ b/index.html
@@ -34,18 +34,29 @@
     <!--HTML Semantics: the main tag is added to specify the main content of this document-->
 
     <main>
-      <div class="hero"></div>
+      <!--Semantic HTML: Wrapping the image in a section tag because it has its own section in the document-->
+
+      <section class="hero"></section>
 
       <!--Semantic HTML: Replaced the div with a section tag to define the left hand side section of the contents -->
 
       <section class="content">
         <!-- Semantic HTML: Replaced the div with article tags for each of the 3 in order to specify independent self contained content   -->
 
+        <!--Semantic HTML: Nesting the img tag in a figure tag and adding a figcaption in the figure tag-->
+
         <article class="search-engine-optimization">
-          <img
-            src="./assets/images/search-engine-optimization.jpg"
-            class="float-left"
-          />
+          <figure>
+            <img
+              src="./assets/images/search-engine-optimization.jpg"
+              class="float-left"
+              alt="Birds eye view of a desk with a laptop,cup of tea and pens"
+            />
+            <figcaption>
+              Birds eye view of a desk with a laptop,cup of tea and pens
+            </figcaption>
+          </figure>
+
           <h2>Search Engine Optimization</h2>
           <p>
             The dominance of mobile internet use means that users are searching
@@ -59,10 +70,16 @@
           id="online-reputation-management"
           class="online-reputation-management"
         >
-          <img
-            src="./assets/images/online-reputation-management.jpg"
-            class="float-right"
-          />
+          <figure>
+            <img
+              src="./assets/images/online-reputation-management.jpg"
+              class="float-right"
+              alt="image of laptop showing a graph"
+            />
+
+            <figcaption>Laptop representing data</figcaption>
+          </figure>
+
           <h2>Online Reputation Management</h2>
           <p>
             The web is full of opinions, and some of these can be negative.
@@ -74,10 +91,15 @@
         </article>
 
         <article id="social-media-marketing" class="social-media-marketing">
-          <img
-            src="./assets/images/social-media-marketing.jpg"
-            class="float-left"
-          />
+          <figure>
+            <img
+              src="./assets/images/social-media-marketing.jpg"
+              class="float-left"
+              alt="birds eye view of a table with a laptop and text of different methods of social media marketing"
+            />
+            <figcaption>Different methods of social media marketing</figcaption>
+          </figure>
+
           <h2>Social Media Marketing</h2>
           <p>
             Social media continues to have a sizable influence on buying habits.
