linking-SEO-nav-bar-to-the-main-SEO-text

--- a/index.html
+++ b/index.html
@@ -45,7 +45,12 @@
 
         <!--Semantic HTML: Nesting the img tag in a figure tag and adding a figcaption in the figure tag-->
 
-        <article class="search-engine-optimization">
+        <article
+          class="search-engine-optimization"
+          id="search-engine-optimization"
+        >
+          <!--added id element in order to link the search engine bar on the nav bar-->
+
           <figure>
             <img
               src="./assets/images/search-engine-optimization.jpg"
@@ -74,7 +79,7 @@
             <img
               src="./assets/images/online-reputation-management.jpg"
               class="float-right"
-              alt="image of laptop showing a graph"
+              alt="image of laptop showing a gr"
             />
 
             <figcaption>Laptop representing data</figcaption>
