Adding-alt-on-aside-section-images

--- a/index.html
+++ b/index.html
@@ -117,10 +117,15 @@
 
       <!--Semantic HTML: Due to the additional content on the RHS of the main, a aside tag is required-->
 
+      <!-- Semantic HTML: due to accessability adding alt function to all the images on the aside section-->
+
       <aside class="benefits">
         <div class="benefit-lead">
           <h3>Lead Generation</h3>
-          <img src="./assets/images/lead-generation.png" />
+          <img
+            src="./assets/images/lead-generation.png"
+            alt="image representing lead generation"
+          />
           <p>
             Inbound strategies for lead generation require less work for your
             business, bringing customers directly to your website.
@@ -129,7 +134,10 @@
 
         <div class="benefit-brand">
           <h3>Brand Awareness</h3>
-          <img src="./assets/images/brand-awareness.png" />
+          <img
+            src="./assets/images/brand-awareness.png"
+            alt="image representing brand awareness"
+          />
           <p>
             Users find your business through paid and organic searches,
             increasing the search ranking and visibility for your business.
@@ -138,7 +146,10 @@
 
         <div class="benefit-cost">
           <h3>Cost Management</h3>
-          <img src="./assets/images/cost-management.png" />
+          <img
+            src="./assets/images/cost-management.png"
+            alt="image representing cost management"
+          />
           <p>
             As the search ranking for your business increases, your advertising
             costs decrease, and you no longer need to advertise your page.
