Adjusting-document-title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>Horiseon Landing Page</title>
+    <title>Horiseon Marketing Agency Landing Page</title>
   </head>
 
   <body>
@@ -51,7 +51,7 @@
         >
           <!--added id element in order to link the search engine bar on the nav bar-->
 
-          <figure>
+          <figure class="services-img">
             <img
               src="./assets/images/search-engine-optimization.jpg"
               class="float-left"
