--- a/index.html
+++ b/index.html
@@ -31,132 +31,128 @@
       </nav>
     </header>
 
-    <!--HTML Semantics: the main tag is added to specify the main content of this document-->
+    <!--Semantic HTML: Wrapping the background-image in a section tag -->
 
-    <main>
-      <!--Semantic HTML: Wrapping the image in a section tag because it has its own section in the document-->
+    <section class="hero"></section>
 
-      <section class="hero"></section>
+    <!--Semantic HTML: Replaced the div with a section tag to define the left hand side section of the contents -->
 
-      <!--Semantic HTML: Replaced the div with a section tag to define the left hand side section of the contents -->
+    <main class="content">
+      <!-- Semantic HTML: Replaced the div with article tags for each of the 3 in order to specify independent self contained content   -->
 
-      <section class="content">
-        <!-- Semantic HTML: Replaced the div with article tags for each of the 3 in order to specify independent self contained content   -->
+      <!--Semantic HTML: Nesting the img tag in a figure tag and adding a figcaption in the figure tag-->
 
-        <!--Semantic HTML: Nesting the img tag in a figure tag and adding a figcaption in the figure tag-->
+      <article
+        class="search-engine-optimization"
+        id="search-engine-optimization"
+      >
+        <!--added id element in order to link the search engine bar on the nav bar-->
 
-        <article
-          class="search-engine-optimization"
-          id="search-engine-optimization"
-        >
-          <!--added id element in order to link the search engine bar on the nav bar-->
-
-          <figure class="services-img">
-            <img
-              src="./assets/images/search-engine-optimization.jpg"
-              class="float-left"
-              alt="Birds eye view of a desk with a laptop,cup of tea and pens"
-            />
-            <figcaption>
-              Birds eye view of a desk with a laptop,cup of tea and pens
-            </figcaption>
-          </figure>
-
-          <h2>Search Engine Optimization</h2>
-          <p>
-            The dominance of mobile internet use means that users are searching
-            for the right business as they travel, shop, or sit on their couch
-            at home. Search Engine Optimization (SEO) allows you to increase
-            your visibility and find the right customers for your business.
-          </p>
-        </article>
-
-        <article
-          id="online-reputation-management"
-          class="online-reputation-management"
-        >
-          <figure>
-            <img
-              src="./assets/images/online-reputation-management.jpg"
-              class="float-right"
-              alt="image of laptop showing a gr"
-            />
-
-            <figcaption>Laptop representing data</figcaption>
-          </figure>
-
-          <h2>Online Reputation Management</h2>
-          <p>
-            The web is full of opinions, and some of these can be negative.
-            Social media allows anyone with an internet connection to say
-            whatever they want about your business. Online Reputation Management
-            gives you the control over what potential customers see when they
-            search for your business.
-          </p>
-        </article>
-
-        <article id="social-media-marketing" class="social-media-marketing">
-          <figure>
-            <img
-              src="./assets/images/social-media-marketing.jpg"
-              class="float-left"
-              alt="birds eye view of a table with a laptop and text of different methods of social media marketing"
-            />
-            <figcaption>Different methods of social media marketing</figcaption>
-          </figure>
-
-          <h2>Social Media Marketing</h2>
-          <p>
-            Social media continues to have a sizable influence on buying habits.
-            Social media marketing helps you determine which platforms are
-            suited to your brand, using analytics to find the right markets and
-            increase your lead generation.
-          </p>
-        </article>
-      </section>
-
-      <!--Semantic HTML: Due to the additional content on the RHS of the main, a aside tag is required-->
-
-      <!-- Semantic HTML: due to accessability adding alt function to all the images on the aside section-->
-
-      <aside class="benefits">
-        <div class="benefit-lead">
-          <h3>Lead Generation</h3>
+        <figure class="services-img">
           <img
-            src="./assets/images/lead-generation.png"
-            alt="image representing lead generation"
+            src="./assets/images/search-engine-optimization.jpg"
+            class="float-left"
+            alt="Birds eye view of a desk with a laptop,cup of tea and pens"
           />
-          <p>
-            Inbound strategies for lead generation require less work for your
-            business, bringing customers directly to your website.
-          </p>
-        </div>
+          <figcaption>
+            Birds eye view of a desk with a laptop,cup of tea and pens
+          </figcaption>
+        </figure>
 
-        <div class="benefit-brand">
-          <h3>Brand Awareness</h3>
-          <img
-            src="./assets/images/brand-awareness.png"
-            alt="image representing brand awareness"
-          />
-          <p>
-            Users find your business through paid and organic searches,
-            increasing the search ranking and visibility for your business.
-          </p>
-        </div>
+        <h2>Search Engine Optimization</h2>
+        <p>
+          The dominance of mobile internet use means that users are searching
+          for the right business as they travel, shop, or sit on their couch at
+          home. Search Engine Optimization (SEO) allows you to increase your
+          visibility and find the right customers for your business.
+        </p>
+      </article>
 
-        <div class="benefit-cost">
-          <h3>Cost Management</h3>
+      <article
+        id="online-reputation-management"
+        class="online-reputation-management"
+      >
+        <figure>
           <img
-            src="./assets/images/cost-management.png"
-            alt="image representing cost management"
+            src="./assets/images/online-reputation-management.jpg"
+            class="float-right"
+            alt="image of laptop showing a gr"
           />
-          <p>
-            As the search ranking for your business increases, your advertising
-            costs decrease, and you no longer need to advertise your page.
-          </p>
-        </div>
-      </aside>
+
+          <figcaption>Laptop representing data</figcaption>
+        </figure>
+
+        <h2>Online Reputation Management</h2>
+        <p>
+          The web is full of opinions, and some of these can be negative. Social
+          media allows anyone with an internet connection to say whatever they
+          want about your business. Online Reputation Management gives you the
+          control over what potential customers see when they search for your
+          business.
+        </p>
+      </article>
+
+      <article id="social-media-marketing" class="social-media-marketing">
+        <figure>
+          <img
+            src="./assets/images/social-media-marketing.jpg"
+            class="float-left"
+            alt="birds eye view of a table with a laptop and text of different methods of social media marketing"
+          />
+          <figcaption>Different methods of social media marketing</figcaption>
+        </figure>
+
+        <h2>Social Media Marketing</h2>
+        <p>
+          Social media continues to have a sizable influence on buying habits.
+          Social media marketing helps you determine which platforms are suited
+          to your brand, using analytics to find the right markets and increase
+          your lead generation.
+        </p>
+      </article>
     </main>
+
+    <!--Semantic HTML: Due to the additional content on the RHS of the main, a aside tag is required-->
+
+    <!-- Semantic HTML: due to accessability adding alt function to all the images on the aside section-->
+
+    <aside class="benefits">
+      <div class="benefit-lead">
+        <h3>Lead Generation</h3>
+        <img
+          src="./assets/images/lead-generation.png"
+          alt="image representing lead generation"
+        />
+        <p>
+          Inbound strategies for lead generation require less work for your
+          business, bringing customers directly to your website.
+        </p>
+      </div>
+
+      <div class="benefit-brand">
+        <h3>Brand Awareness</h3>
+        <img
+          src="./assets/images/brand-awareness.png"
+          alt="image representing brand awareness"
+        />
+        <p>
+          Users find your business through paid and organic searches, increasing
+          the search ranking and visibility for your business.
+        </p>
+      </div>
+
+      <div class="benefit-cost">
+        <h3>Cost Management</h3>
+        <img
+          src="./assets/images/cost-management.png"
+          alt="image representing cost management"
+        />
+        <p>
+          As the search ranking for your business increases, your advertising
+          costs decrease, and you no longer need to advertise your page.
+        </p>
+      </div>
+    </aside>
 
     <!--Semantic HTML: Changing dive for a footer tag -->
     <footer class="footer">
