adjusted-semantic-HTML-tags

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <!--Semantic HTML: The large background image is nested in a section tag  -->
 
-    <section class="hero"></section>
+    <div class="hero"></div>
 
     <!--Semantic HTML: The 3 independent self contained content is nested in an article tag which is then grouped together and nested in a main tag showing the main content of the web-page -->
 
@@ -157,3 +157,4 @@
     </footer>
   </body>
 </html>
+
